--- a/angular.json
+++ b/angular.json
@@ -31,6 +31,7 @@
               "src/styles.scss"
             ],
             "scripts": [
+              "node_modules/jquery/dist/jquery.min.js",
               "node_modules/jspdf/dist/jspdf.min.js"
             ]
           },
